--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +11,12 @@
         body {
             font-family: Arial, sans-serif;
         }
+
         .county {
             stroke: #333;
             stroke-width: 0.5;
         }
+
         .tooltip {
             position: absolute;
             background: white;
@@ -23,6 +26,7 @@
             pointer-events: none;
             opacity: 0;
         }
+
         .tooltip-box {
             width: 120px;
             height: auto;
@@ -31,11 +35,13 @@
             padding: 5px;
             border-radius: 5px;
         }
+
         #polling-thresholds {
             margin-top: 20px;
         }
     </style>
 </head>
+
 <body>
     <svg id="choropleth" height="600" width="960"></svg>
     <ul id="polling-thresholds"></ul>
@@ -77,7 +83,7 @@
                     const count = locationCounts.get(d.properties.name) || 0;
                     return colorScale(count);
                 })
-                .on("mouseover", function(event, d) {
+                .on("mouseover", function (event, d) {
                     const countyName = d.properties.name;
                     const count = locationCounts.get(countyName) || 0;
 
@@ -93,7 +99,7 @@
                         .attr("stroke", "black")
                         .attr("stroke-width", 2);
                 })
-                .on("mouseout", function() {
+                .on("mouseout", function () {
                     tooltip.transition().duration(200).style("opacity", 0);
                     d3.select(this)
                         .attr("stroke", "#333")
@@ -109,7 +115,18 @@
                 .append("li")
                 .text(threshold => `Up to ${d3.format(",.0f")(threshold)} polling locations`)
                 .style("color", (d, i) => colors[i]);
+
+            const zoom = d3.zoom()
+                .scaleExtent([1, 8])
+                .translateExtent([[0, 0], [width, height]]) // Limit panning to SVG bounds
+                .on("zoom", (event) => {
+                    svg.selectAll("path").attr("transform", event.transform);
+                });
+
+
+            svg.call(zoom);
         }).catch(error => console.error("Error loading data:", error));
     </script>
 </body>
+
 </html>
