added zoom on click + reset zoom

--- a/election.html
+++ b/election.html
@@ -218,6 +218,7 @@
             <h3 style="text-align: center;">Filter by Vote Difference</h3>
             <ul id="vote-thresholds"></ul>
             <div id="clear-filters">Clear Filters</div>
+            <button id="reset-zoom">Reset Zoom</button>
         </div>
         <div id="map-container">
             <svg id="choropleth" height="600" width="960"></svg>
@@ -318,7 +319,33 @@
                             .attr("fill-opacity", 1)  // Reset opacity
                             .attr("stroke", "#333")
                             .attr("stroke-width", 0.5);
+                    })
+                    .on("click", function (event, d) {
+                        // Get bounding box of the selected county
+                        const [[x0, y0], [x1, y1]] = path.bounds(d);
+
+                        // Calculating center + scale for zooming into the county
+                        const dx = x1 - x0,
+                            dy = y1 - y0,
+                            x = (x0 + x1) / 2,
+                            y = (y0 + y1) / 2,
+                            scale = Math.max(1, Math.min(8, 0.9 / Math.max(dx / width, dy / height))),
+                            translate = [width / 2 - scale * x, height / 2 - scale * y];
+
+                        svg.transition()
+                            .duration(750)
+                            .call(
+                                zoom.transform,
+                                d3.zoomIdentity.translate(translate[0], translate[1]).scale(scale)
+                            );
                     });
+
+                d3.select("#reset-zoom").on("click", () => {
+                    svg.transition()
+                        .duration(750)
+                        .call(zoom.transform, d3.zoomIdentity); // Reset to original zoom level
+                });
+
             }
             povertyData = povertyCSV;
 
