--- a/polling.html
+++ b/polling.html
@@ -125,12 +125,31 @@
         #clear-filters:hover {
             background-color: #d32f2f;
         }
+
+        .back-button {
+            display: inline-block;
+            text-align: center;
+            text-decoration: none;
+            margin: 10px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .back-button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 
 <body>
     <header>
         <h1>Polling Locations Choropleth Map</h1>
+        <a href="home.html" class="back-button ">Back to Home</a>
     </header>
 
     <div class="container">
