--- a/index.html
+++ b/index.html
@@ -4,156 +4,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polling Locations Choropleth Map</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://unpkg.com/topojson@3"></script>
+    <title>2024 Election Data Hub</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f8ff;
+            color: #333;
         }
 
-        .county {
-            stroke: #333;
-            stroke-width: 0.5;
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
         }
 
-        .tooltip {
-            position: absolute;
-            background: white;
-            border: 1px solid #ccc;
-            padding: 5px;
-            border-radius: 5px;
-            pointer-events: none;
-            opacity: 0;
-        }
-
-        .tooltip-box {
-            width: 120px;
-            height: auto;
-            background-color: black;
+        header {
+            background-color: #002868;
             color: white;
-            padding: 5px;
-            border-radius: 5px;
+            text-align: center;
+            padding: 20px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        #polling-thresholds {
-            margin-top: 20px;
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        .subtitle {
+            font-style: italic;
+            margin-top: 10px;
+        }
+
+        .map-links {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 30px;
+        }
+
+        .map-link {
+            display: inline-block;
+            padding: 15px 25px;
+            background-color: #bf0a30;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            text-align: center;
+            width: 40%;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .map-link:hover {
+            background-color: #8b0000;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        .description {
+            background-color: white;
+            border-radius: 5px;
+            padding: 20px;
+            margin-top: 30px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 
 <body>
-    <svg id="choropleth" height="600" width="960"></svg>
-    <ul id="polling-thresholds"></ul>
-    <div class="tooltip" id="tooltip"></div>
-    <button id="reset-zoom">Reset Zoom</button>
-    <script>
-        const width = 960, height = 600;
-        const svg = d3.select("#choropleth").attr("width", width).attr("height", height);
-
-        Promise.all([
-            d3.json("data/counties-10m.json"), // Load the TopoJSON data
-            d3.csv("data/polling_places.csv") // Load polling location data
-        ]).then(([topoData, pollingData]) => {
-
-            const counties = topojson.feature(topoData, topoData.objects.counties);
-            const locationCounts = d3.rollup(
-                pollingData,
-                v => v.length,
-                d => d.county_name
-            );
-
-            const countsArray = Array.from(locationCounts.values());
-            const colors = ["#ffe9bd", "#a1dab4", "#41b6c4", "#2c7fb8", "#253494"];
-            const colorScale = d3.scaleQuantile()
-                .domain(countsArray)
-                .range(colors);
-
-            const projection = d3.geoAlbersUsa().fitSize([width, height], counties);
-            const path = d3.geoPath().projection(projection);
-
-            const tooltip = d3.select("#tooltip");
-
-            svg.selectAll("path")
-                .data(counties.features)
-                .enter().append("path")
-                .attr("d", path)
-                .attr("class", "county")
-                .attr("fill", d => {
-                    const count = locationCounts.get(d.properties.name) || 0;
-                    return colorScale(count);
-                })
-                .on("mouseover", function (event, d) {
-                    const countyName = d.properties.name;
-                    const count = locationCounts.get(countyName) || 0;
-
-                    tooltip.transition().duration(200).style("opacity", 1);
-                    tooltip.html(`<div class="tooltip-box">
-                                    <strong>${countyName}</strong><br>
-                                    Polling Locations: ${count}
-                                  </div>`)
-                        .style("left", (event.pageX + 10) + "px")
-                        .style("top", (event.pageY - 28) + "px");
-
-                    d3.select(this)
-                        .attr("stroke", "black")
-                        .attr("stroke-width", 2)
-                        .attr("fill-opacity", 0.5);
-                })
-                .on("mouseout", function () {
-                    tooltip.transition().duration(200).style("opacity", 0);
-                    d3.select(this)
-                        .attr("stroke", "#333")
-                        .attr("stroke-width", 0.5)
-                        .attr("fill-opacity", 1);
-                })
-                .on("click", function (event, d) {
-                    // Get bounding box of the selected county
-                    const [[x0, y0], [x1, y1]] = path.bounds(d);
-
-                    // Calculating center + scale for zooming into the county
-                    const dx = x1 - x0,
-                        dy = y1 - y0,
-                        x = (x0 + x1) / 2,
-                        y = (y0 + y1) / 2,
-                        scale = Math.max(1, Math.min(8, 0.9 / Math.max(dx / width, dy / height))),
-                        translate = [width / 2 - scale * x, height / 2 - scale * y];
-
-                    svg.transition()
-                        .duration(750)
-                        .call(
-                            zoom.transform,
-                            d3.zoomIdentity.translate(translate[0], translate[1]).scale(scale)
-                        );
-                });
-
-            d3.select("#reset-zoom").on("click", () => {
-                svg.transition()
-                    .duration(750)
-                    .call(zoom.transform, d3.zoomIdentity); // Reset to original zoom level
-            });
-
-            const thresholds = colorScale.quantiles();
-            const ul = d3.select("#polling-thresholds");
-
-            ul.selectAll("li")
-                .data(thresholds)
-                .enter()
-                .append("li")
-                .text(threshold => `Up to ${d3.format(",.0f")(threshold)} polling locations`)
-                .style("color", (d, i) => colors[i]);
-
-            const zoom = d3.zoom()
-                .scaleExtent([1, 8])
-                .translateExtent([[0, 0], [width, height]]) // Limit panning to SVG bounds
-                .on("zoom", (event) => {
-                    svg.selectAll("path").attr("transform", event.transform);
-                });
-
-
-            svg.call(zoom);
-        }).catch(error => console.error("Error loading data:", error));
-    </script>
+    <header>
+        <h1> Election Data Hub</h1>
+        <p class="subtitle">Explore Interactive Choropleth Maps</p>
+    </header>
+    <div class="container">
+        <div class="map-links">
+            <a href="election.html" class="map-link">2020 Election Results Map</a>
+            <a href="polling.html" class="map-link">2024 Polling Locations Map</a>
+        </div>
+        <div class="description">
+            <h2>About Our Election Maps</h2>
+            <p>Welcome to the Election Data Hub. Here you can access two interactive choropleth maps that provide
+                valuable insights into the election process:</p>
+            <ul>
+                <li><strong>Election Results Map:</strong> Visualize vote differences, Democratic votes, and Republican
+                    votes across regions.</li>
+                <li><strong>Polling Locations Map:</strong> Explore the distribution of polling locations to understand
+                    voter accessibility.</li>
+            </ul>
+            <p>Click on either map to dive into the data and gain a deeper understanding of the 2024 election landscape.
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
