Fixed back-to-home button

--- a/polling.html
+++ b/polling.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polling Locations Choropleth Map</title>
-    
+
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
     <style>
@@ -24,7 +24,7 @@
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        
+
         h1 {
             margin: 0;
             font-size: 2.2em;
@@ -152,7 +152,7 @@
 <body>
     <header>
         <h1>Polling Locations Choropleth Map</h1>
-        <a href="home.html" class="back-button ">Back to Home</a>
+        <a href="index.html" class="back-button ">Back to Home</a>
     </header>
 
     <div class="container">
