--- a/election.html
+++ b/election.html
@@ -281,7 +281,7 @@
 <body>
     <header>
         <h1>Election Results Choropleth Map</h1>
-        <a href="home.html" class="back-button ">Back to Home</a>
+        <a href="index.html" class="back-button ">Back to Home</a>
     </header>
     <div class="tab-container">
         <div class="tab active-tab" data-map="vote-difference">Vote Difference</div>
