Fixed bugs with duplicate county names and made no data regions appear differently for polling viz

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container">
         <div class="map-links">
             <a href="election.html" class="map-link">2020 Election Results Map</a>
-            <a href="polling.html" class="map-link">2024 Polling Locations Map</a>
+            <a href="polling.html" class="map-link">2010 - 2020 Polling Locations Map</a>
         </div>
         <div class="description">
             <h2>About Our Election Maps</h2>
